--- a/pages/19891.html
+++ b/pages/19891.html
@@ -309,8 +309,22 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body><p id="k" style="color: #333; font-family: georgia,verdana,sans-serif; font-size: 173%; font-weight: bold; line-height: 1.3em; text-align: left;">K</p>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>See also</title></head>
+<body><p id="a" style="color: #333; font-family: georgia,verdana,sans-serif; font-size: 173%; font-weight: bold; line-height: 1.3em; text-align: left;">A</p>
+<pre><code>@ARTICLE{2014arXiv1406.3219A,
+   author = {{Awodey}, S.},
+    title = "{Natural models of homotopy type theory}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1406.3219},
+ primaryClass = "math.CT",
+ keywords = {Mathematics - Category Theory, Mathematics - Logic},
+     year = 2014,
+    month = jun,
+   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1406.3219A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}</code></pre>
+<p id="k" style="color: #333; font-family: georgia,verdana,sans-serif; font-size: 173%; font-weight: bold; line-height: 1.3em; text-align: left;">K</p>
 <p id="kapulkin_2012_the-simplicial-model-of-univalent-foundations"> BibTeX entry for <a href="/nlab/show/Initiality+Project+-+References#kapulkin_2012_the-simplicial-model-of-univalent-foundations">this reference</a>:</p>
 
 <pre><code>@Misc{kapulkin_2012_the-simplicial-model-of-univalent-foundations,
@@ -391,20 +405,28 @@ margin-left: 0em;
   note	       = {Lecture at the special session on category theory and type theory in honor of Per Martin-L{\"o}f on his 75th birthday, August 17--19, 2017, during the Logic Colloquium 2017, August 14--20, 2017, Stockholm},
   url	       = {https://www.math.ias.edu/Voevodsky/voevodsky-publications_abstracts.html#logcoll-1}
 }</code></pre>
+
+<h2 id="see_also">See also</h2>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Initiality+Project">Initiality Project</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+References">Initiality Project - References</a></li>
+</ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/Initiality+Project">Initiality Project</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 30, 2018 at 16:53:43.
+  Last revised on October 30, 2018 at 20:11:53.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - BibTeX database" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+BibTeX+database" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+BibTeX+database/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+BibTeX+database" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+BibTeX+database" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+BibTeX+database" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+BibTeX+database/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+BibTeX+database" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+BibTeX+database" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - BibTeX database/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
