--- a/pages/17343.html
+++ b/pages/17343.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -2482,7 +2482,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>The pairs <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>W</mi><mo>∩</mo><mi>Cof</mi><mspace width="thickmathspace"></mspace><mo>,</mo><mspace width="thickmathspace"></mspace><mi>Fib</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(W \cap Cof\;,\; Fib)</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>Cap</mi><mspace width="thickmathspace"></mspace><mo>,</mo><mspace width="thickmathspace"></mspace><mi>W</mi><mo>∩</mo><mi>Fib</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(Cap\;,\; W\cap Fib)</annotation></semantics></math> are both <a class="existingWikiWord" href="/nlab/show/weak+factorization+systems">weak factorization systems</a>, def. <a class="maruku-ref" href="#WeakFactorizationSystem"></a>.</p>
+<p>The pairs <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>W</mi><mo>∩</mo><mi>Cof</mi><mspace width="thickmathspace"></mspace><mo>,</mo><mspace width="thickmathspace"></mspace><mi>Fib</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(W \cap Cof\;,\; Fib)</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>Cof</mi><mspace width="thickmathspace"></mspace><mo>,</mo><mspace width="thickmathspace"></mspace><mi>W</mi><mo>∩</mo><mi>Fib</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(Cof\;,\; W\cap Fib)</annotation></semantics></math> are both <a class="existingWikiWord" href="/nlab/show/weak+factorization+systems">weak factorization systems</a>, def. <a class="maruku-ref" href="#WeakFactorizationSystem"></a>.</p>
 </li>
 </ol>
 
@@ -10396,14 +10396,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 23, 2018 at 02:53:42.
+  Last revised on October 31, 2018 at 01:10:32.
   See the <a href="https://ncatlab.org/nlab/history/Introduction to Homotopy Theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Introduction+to+Homotopy+Theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Introduction+to+Homotopy+Theory/127" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(127 revisions)</span> | <a href="/nlab/show/diff/Introduction+to+Homotopy+Theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Introduction+to+Homotopy+Theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Introduction+to+Homotopy+Theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Introduction+to+Homotopy+Theory/128" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(128 revisions)</span> | <a href="/nlab/show/diff/Introduction+to+Homotopy+Theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Introduction+to+Homotopy+Theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Introduction to Homotopy Theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
