--- a/pages/18070.html
+++ b/pages/18070.html
@@ -1141,7 +1141,13 @@ margin-left: 0em;
 <p>Reviews include</p>
 
 <ul>
-<li id="FrancisLect17"><a class="existingWikiWord" href="/nlab/show/John+Francis">John Francis</a>, <em>The H-Principle Lecture 17: The sheaf of configuration spaces and the scanning map</em> (<a href="http://math.northwestern.edu/~jnkf/classes/hprin/17configmapping.pdf">pdf</a>)</li>
+<li id="FrancisLect17">
+<p><a class="existingWikiWord" href="/nlab/show/John+Francis">John Francis</a>, <em>The H-Principle Lecture 17: The sheaf of configuration spaces and the scanning map</em> (<a href="http://math.northwestern.edu/~jnkf/classes/hprin/17configmapping.pdf">pdf</a>)</p>
+</li>
+
+<li id="FrancisLect18">
+<p><a class="existingWikiWord" href="/nlab/show/John+Francis">John Francis</a>, <em>The H-Principle Lecture 18: The proof of McDuff’s theorem First part</em> (<a href="http://math.northwestern.edu/~jnkf/classes/hprin/18mcduff1.pdf">pdf</a>)</p>
+</li>
 </ul>
 
 <p>See also</p>
@@ -1183,14 +1189,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 29, 2018 at 11:32:52.
+  Last revised on October 31, 2018 at 03:10:52.
   See the <a href="https://ncatlab.org/nlab/history/configuration space (mathematics)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+%28mathematics%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+%28mathematics%29/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/configuration+space+%28mathematics%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+%28mathematics%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space (mathematics)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
