--- a/pages/9749.html
+++ b/pages/9749.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5482/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5482/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -617,10 +617,10 @@ h: P([0, 1]) \ni \tau \mapsto \int_{0}^{1} t \tau (dt) \in [0, 1].
 </li>
 </ul>
 
-<p>E. Burroni discusses the Giry monad in:</p>
+<p><span class="newWikiWord">Elisabeth Burroni<a href="/nlab/new/Elisabeth+Burroni">?</a></span> discusses the Giry monad in:</p>
 
 <ul>
-<li id="Burroni09">Burroni, <em>Lois distributives. Applications aux automates stochastiques</em>, TAC 22, 2009 pp.199-221 (<a href="http://www.tac.mta.ca/tac/volumes/22/7/22-07.pdf">pdf</a>)</li>
+<li id="Burroni09"><span class="newWikiWord">Elisabeth Burroni<a href="/nlab/new/Elisabeth+Burroni">?</a></span>, <em>Lois distributives. Applications aux automates stochastiques</em>, TAC 22, 2009 pp.199-221 (<a href="http://www.tac.mta.ca/tac/volumes/22/7/22-07.pdf">pdf</a>)</li>
 </ul>
 
 <p>where she derives stochastic <a class="existingWikiWord" href="/nlab/show/automata">automata</a> as algebras for a suitable <a class="existingWikiWord" href="/nlab/show/distributive+law">distributive law</a> on the monoid and Giry monads.</p>
@@ -642,14 +642,14 @@ h: P([0, 1]) \ni \tau \mapsto \int_{0}^{1} t \tau (dt) \in [0, 1].
 
 <div class="revisedby">
   <p>
-  Last revised on October 31, 2018 at 02:39:10.
+  Last revised on October 31, 2018 at 03:39:11.
   See the <a href="https://ncatlab.org/nlab/history/Giry monad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Giry+monad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Giry+monad/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/Giry+monad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Giry+monad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Giry+monad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Giry+monad/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/Giry+monad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Giry+monad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Giry monad/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
