--- a/pages/19890.html
+++ b/pages/19890.html
@@ -311,7 +311,15 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>See also</title></head>
 <body><p id="a" style="color: #333; font-family: georgia,verdana,sans-serif; font-size: 173%; font-weight: bold; line-height: 1.3em; text-align: left;">A</p>
-<p>Insert Awodey2014 here</p>
+<dl>
+<dt id="awodey_2018_natural-models-of-homotopy-theory"> <a class="existingWikiWord" href="/nlab/show/Steve+Awodey">Steve Awodey</a>, <em>Natural models of homotopy type theory</em></dt>
+
+<dd>
+<p>Math. Structures Comput. Sci. 28 (2018), no. 2, 241–286.</p>
+
+<p><a href="https://arxiv.org/abs/1406.3219">arXiv:1406.3219</a>, <a href="https://doi.org/10.1017/S0960129516000268">doi:10.1017/S0960129516000268</a>, <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=3742564">MR</a>, <a href="/nlab/show/Initiality+Project+-+BibTeX+database#awodey_2018_natural-models-of-homotopy-theory">BibTeX</a></p>
+</dd>
+</dl>
 <p id="k" style="color: #333; font-family: georgia,verdana,sans-serif; font-size: 173%; font-weight: bold; line-height: 1.3em; text-align: left;">K</p>
 <dl>
 <dt id="kapulkin_2012_the-simplicial-model-of-univalent-foundations"> <a class="existingWikiWord" href="/nlab/show/Krzysztof+Kapulkin">Krzysztof Kapulkin</a> and <a class="existingWikiWord" href="/nlab/show/Peter+LeFanu+Lumsdaine">Peter LeFanu Lumsdaine</a>, <em>The simplicial model of univalent foundations (after Voevodsky)</em></dt>
@@ -416,14 +424,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 30, 2018 at 20:13:53.
+  Last revised on October 31, 2018 at 08:41:16.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - References" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+References" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+References/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+References" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+References" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+References" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+References/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+References" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+References" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - References/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
