--- a/pages/19891.html
+++ b/pages/19891.html
@@ -327,7 +327,8 @@ margin-left: 0em;
   mrnumber     = 3742564,
   mrreviewer   = {Fredrik Nordvall Forsberg},
   doi          = {10.1017/S0960129516000268},
-  url          = {https://doi.org/10.1017/S0960129516000268}
+  url          = {https://doi.org/10.1017/S0960129516000268},
+  eprint       = {1406.3219}
 }</code></pre>
 <p id="k" style="color: #333; font-family: georgia,verdana,sans-serif; font-size: 173%; font-weight: bold; line-height: 1.3em; text-align: left;">K</p>
 <p id="kapulkin_2012_the-simplicial-model-of-univalent-foundations"> BibTeX entry for <a href="/nlab/show/Initiality+Project+-+References#kapulkin_2012_the-simplicial-model-of-univalent-foundations">this reference</a>:</p>
@@ -424,14 +425,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 31, 2018 at 08:48:29.
+  Last revised on October 31, 2018 at 09:23:48.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - BibTeX database" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+BibTeX+database" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+BibTeX+database/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+BibTeX+database" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+BibTeX+database" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+BibTeX+database" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+BibTeX+database/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+BibTeX+database" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+BibTeX+database" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - BibTeX database/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
