--- a/pages/4317.html
+++ b/pages/4317.html
@@ -510,7 +510,21 @@ margin-left: 0em;
 </div>
 
 <h1 id="rig_categories">Rig categories</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition">Definition</a></li><li><a href="#examples">Examples</a><ul><li><a href="#distributive_categories">Distributive categories</a></li><li><a href="#DistributiveMonoidalCategories">Distributive monoidal categories</a></li></ul></li><li><a href="#baezs_conjecture">Baez’s conjecture</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#definition'>Definition</a></li>
+<li><a href='#examples'>Examples</a></li>
+<ul>
+<li><a href='#distributive_categories'>Distributive categories</a></li>
+<li><a href='#DistributiveMonoidalCategories'>Distributive monoidal categories</a></li>
+</ul>
+<li><a href='#baezs_conjecture'>Baez’s conjecture</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>Recall that a <a class="existingWikiWord" href="/nlab/show/rig">rig</a> is a ‘<a class="existingWikiWord" href="/nlab/show/ring">ring</a> without negatives’: a <a class="existingWikiWord" href="/nlab/show/monoid+object">monoid object</a> in the <a class="existingWikiWord" href="/nlab/show/monoidal+category">monoidal category</a> of <a class="existingWikiWord" href="/nlab/show/commutative+monoids">commutative monoids</a> with the usual <a class="existingWikiWord" href="/nlab/show/tensor+product">tensor product</a>. <a class="existingWikiWord" href="/nlab/show/categorification">Categorifying</a> this notion, we obtain various notions of <em><a class="existingWikiWord" href="/nlab/show/2-rig">2-rig</a></em>. One of these, in which both “addition” and “multiplication” are represented by abstract <a class="existingWikiWord" href="/nlab/show/monoidal+category">monoidal structures</a>, is the notion of <em>rig category</em>, also known as a <em>bimonoidal category</em>.</p>
@@ -623,7 +637,7 @@ margin-left: 0em;
 <li>G. Kelly, <em>Coherence theorems for lax algebras and distributive laws</em>, Lecture Notes in Mathematics 420, Springer Verlag, Berlin, 1974, pp. 281-375.</li>
 </ul>
 
-<p>where these categories are called <em>ring categories</em>. Discussion with an eye towers the <a class="existingWikiWord" href="/nlab/show/K-theory+of+a+bipermutative+category">K-theory of a bipermutative category</a> is in</p>
+<p>where these categories are called <em>ring categories</em>. Discussion with an eye towards the <a class="existingWikiWord" href="/nlab/show/K-theory+of+a+bipermutative+category">K-theory of a bipermutative category</a> is in</p>
 
 <ul id="May">
 <li><a class="existingWikiWord" href="/nlab/show/Peter+May">Peter May</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mn>∞</mn></msub></mrow><annotation encoding="application/x-tex">E_\infty</annotation></semantics></math> Ring Spaces and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mn>∞</mn></msub></mrow><annotation encoding="application/x-tex">E_\infty</annotation></semantics></math> Ring spectra</em>, Springer lectures notes in mathematics, Vol. 533, (1977) (<a href="http://www.math.uchicago.edu/~may/BOOKS/e_infty.pdf">pdf</a>) chaper VI</li>
@@ -642,14 +656,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 12, 2018 at 05:40:46.
+  Last revised on October 31, 2018 at 19:49:55.
   See the <a href="https://ncatlab.org/nlab/history/rig category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/rig+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/rig+category/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/rig+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/rig+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/rig+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/rig+category/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/rig+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/rig+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/rig category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
