--- a/pages/573.html
+++ b/pages/573.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/3823/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3823/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1697,6 +1697,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Rune+Haugseng">Rune Haugseng</a>, <em>On the equivalence between <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Θ</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">\Theta_n</annotation></semantics></math>-spaces and iterated Segal spaces</em>, <a href="https://arxiv.org/abs/1604.08480">arXiv</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Julie+Bergner">Julie Bergner</a>, <em>A survey of models for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>∞</mn><mo>,</mo><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\infty,n)</annotation></semantics></math>-categories</em> (<a href="https://arxiv.org/abs/1810.10052">arXiv:1810.10052</a>)</p>
+</li>
 </ul>
 
 <p>A model for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>∞</mn><mo>,</mo><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\infty,n)</annotation></semantics></math>-categories in terms of <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-sheaves">(∞,1)-sheaves</a> on variant of a <a class="existingWikiWord" href="/nlab/show/site">site</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/dimension">dimensional</a> <a class="existingWikiWord" href="/nlab/show/manifolds">manifolds</a> with <a class="existingWikiWord" href="/nlab/show/embeddings">embeddings</a> between them is discussed in</p>
@@ -1734,14 +1738,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  1, 2018 at 10:49:25.
+  Last revised on November  1, 2018 at 01:59:24.
   See the <a href="https://ncatlab.org/nlab/history/(infinity,n)-category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/%28infinity%2Cn%29-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%28infinity%2Cn%29-category/53" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(53 revisions)</span> | <a href="/nlab/show/diff/%28infinity%2Cn%29-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%28infinity%2Cn%29-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/%28infinity%2Cn%29-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%28infinity%2Cn%29-category/54" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(54 revisions)</span> | <a href="/nlab/show/diff/%28infinity%2Cn%29-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%28infinity%2Cn%29-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/(infinity,n)-category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
